	PR fortran/27378 	* parse.c (next_statement): Add check to avoid an ICE when 	gfc_current_locus.lb is not set.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@113603 138bc75d-0d04-0410-961f-82ee72b054a4